fix contact form size on mobile, align left on desktop for portfolio list

--- a/src/components/contact.sass
+++ b/src/components/contact.sass
@@ -9,6 +9,7 @@
   margin-bottom: 1em
   border: solid 1px #e3314c
   transition: box-shadow 100ms, border 100ms
+  box-sizing: border-box
 
 .textarea
   min-height: 120px
