--- a/src/components/portfoliolist.sass
+++ b/src/components/portfoliolist.sass
@@ -34,6 +34,8 @@
   text-align: center
   color: $red
   text-decoration: none
+  @include bp($media-medium-limit)
+    text-align: unset
   h2
     margin-top: 0
   &:hover
